[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/DisplayCase.gd" type="Script" id=1]
[ext_resource path="res://src/util/Navigation.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/img/007UnderConstruction.png" type="Texture" id=3]
[ext_resource path="res://assets/img/005SceneMenuHorizontal.png" type="Texture" id=4]
[ext_resource path="res://assets/img/3D background2.png" type="Texture" id=5]

[node name="DisplayCase" type="Node2D"]
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Navigation" parent="." instance=ExtResource( 2 )]
position = Vector2( 1769, 860 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 421, 189 )
rotation = -0.191364
texture = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 1399.0
margin_top = 25.0
margin_right = 1879.0
margin_bottom = 211.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
margin_left = 148.0
margin_top = 27.0
margin_right = 282.0
margin_bottom = 154.0
custom_constants/separation = 33
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GuitarBtn" type="Button" parent="TextureRect/VBoxContainer"]
margin_right = 134.0
margin_bottom = 20.0
text = "Guitars"

[node name="BassBtn" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 53.0
margin_right = 134.0
margin_bottom = 73.0
text = "Bass"

[node name="DrumsBtn" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 106.0
margin_right = 134.0
margin_bottom = 126.0
text = "Drums"

[node name="VBoxContainer2" type="VBoxContainer" parent="TextureRect"]
margin_left = 304.0
margin_top = 27.0
margin_right = 438.0
margin_bottom = 154.0
custom_constants/separation = 33
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MetalBtn" type="Button" parent="TextureRect/VBoxContainer2"]
margin_right = 134.0
margin_bottom = 20.0
text = "Metal"

[node name="JazzBtn" type="Button" parent="TextureRect/VBoxContainer2"]
margin_top = 53.0
margin_right = 134.0
margin_bottom = 73.0
text = "Jazz"

[node name="PopBtn" type="Button" parent="TextureRect/VBoxContainer2"]
margin_top = 106.0
margin_right = 134.0
margin_bottom = 126.0
text = "Pop"

[node name="AllBtn" type="Button" parent="TextureRect"]
margin_left = 31.0
margin_top = 26.0
margin_right = 126.0
margin_bottom = 154.0
text = "All"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 11.0
margin_top = 7.0
margin_right = 51.0
margin_bottom = 21.0
text = "Display Case"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 956, 547 )
scale = Vector2( 0.327948, 0.359816 )
z_index = -1
texture = ExtResource( 5 )

[connection signal="button_up" from="TextureRect/VBoxContainer/GuitarBtn" to="." method="_on_GuitarBtn_button_up"]
[connection signal="button_up" from="TextureRect/VBoxContainer/BassBtn" to="." method="_on_BassBtn_button_up"]
[connection signal="button_up" from="TextureRect/VBoxContainer/DrumsBtn" to="." method="_on_DrumsBtn_button_up"]
[connection signal="button_up" from="TextureRect/VBoxContainer2/MetalBtn" to="." method="_on_MetalBtn_button_up"]
[connection signal="button_up" from="TextureRect/VBoxContainer2/JazzBtn" to="." method="_on_JazzBtn_button_up"]
[connection signal="button_up" from="TextureRect/VBoxContainer2/PopBtn" to="." method="_on_PopBtn_button_up"]
[connection signal="button_up" from="TextureRect/AllBtn" to="." method="_on_AllBtn_up"]
